--- a/sryles/style.css
+++ b/sryles/style.css
@@ -66,8 +66,9 @@ nav h1 {
     text-shadow: 0 2px 2px #000000c9;
 }
 nav .menu {
-    font-size: 30px;
+    font-size: 20px;
     display: none;
+    cursor: pointer;
 }
 /* header content  */
 header .content {
