--- a/sryles/responsive.css
+++ b/sryles/responsive.css
@@ -1,24 +1,32 @@
-@media screen and (max-width: 576px) {
+
+@media screen and (max-width: 1180px) {
+    nav {
+        margin: 0 10px;
+    }
+    .banner {
+        margin: 0 10px ;
+    }
+}
+@media screen and (max-width: 768px) {
     nav ul {
         display: none;
     }
-    nav {
-        margin: 0 10px;
+    nav .brand {
+        font-size: 25px;
     }
     nav .menu {
         display: block;
     }
-    header .content {
-        margin: 15px 10px;
-    }
+   
     header .content h1 {
-        font-size: 25px;
+        font-size: 35px;
     }
-    .banner {
-        margin: 0 10px ;
+}
+@media screen and (max-width: 576px) {
+    header .content h1 {
+        font-size: 30px;
     }
     nav .brand {
         font-size: 20px;
     }
 }
-@media screen and (max-width: 500px) {}
