--- a/sryles/responsive.css
+++ b/sryles/responsive.css
@@ -9,6 +9,19 @@
     .quick-fix {
         margin: auto 10px;
     }
+    .features .content {
+        max-width: 380px;
+        margin: 0 10px;
+    }
+}
+@media screen and (max-width: 960px) {
+    .features {
+        flex-direction: column;
+    }
+    .features .content {
+        max-width: 100%;
+        margin: 0 10px;
+    }
 }
 @media screen and (max-width: 768px) {
     :root {
@@ -44,7 +57,7 @@
         font-size: 30px;
     }
     nav .brand {
-        font-size: 20px;
+        font-size: 16px;
     }
     .quick-fix .teams {
         grid-template-columns: repeat(1, 1fr);
