--- a/sryles/style.css
+++ b/sryles/style.css
@@ -137,7 +137,7 @@ header .content p {
 }
 /* architeck section style */
 .features {
-    margin: 80px auto;
+    margin: 80px 0 120px auto;
     max-width: 1160px;
     display: flex;
     gap: 40px;
@@ -185,8 +185,69 @@ header .content p {
     bottom: -39px;
     left: 10px;
     padding: 25px 35px;
+    cursor: default;
 }
 .features .arch button .big {
     font-size: 43px;
     
+}
+/* some fact  */
+.some-fact {
+    max-width: 1160px;
+    margin: 90px auto;
+    margin-bottom: 110px;
+}
+.some-fact .facts img {
+    width: 30px;
+}
+.some-fact .caption h2 {
+    margin-bottom: 10px;
+}
+.some-fact .caption {
+    max-width: 390px;
+    margin-bottom: 50px;
+}
+.some-fact .facts {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 0 30px;
+    gap: 70px;
+}
+.some-fact .facts div {
+    border: 1.5px solid rgba(255, 144, 14, 1);
+    border-radius: 5px;
+    padding: 40px 30px;
+    text-align: center;
+}
+.some-fact .facts div h2 {
+    margin: 4px 0;
+}
+/* sponsors section style */
+.sponsors {
+    max-width: 1160px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    margin-top: 100px;
+}
+.sponsors .title {
+    text-align: center;
+    max-width: 400px;
+    margin: 0 auto;
+}
+.sponsors .title h2 {
+    margin-bottom: 10px;
+}
+.sponsors .brands {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 150px;
+    align-items: center;
+    margin: auto 10px;
+    margin-top: 20px;
+}
+.sponsors .brands div {
+    height: 40px;
+}
+.sponsors .brands img {
+    filter: saturate(.1);
 }
